# TheOneEye

./: .gitignore  CMakeLists.txt  Config.ini  README.md  main.cpp  main.py  main_test.py  multi_robot_config.conf  requirements.txt
Algorithm/: AlgorithmTest.cpp  AlgorithmTest.h
Algorithm/DataProcessing/: XDataLoader.py
Camera/Data/: 041003320410.mvdat
Camera/log/: error_20210407-111904.20202
Common/: Common.cpp  Common.py  DebugPrint.cpp  DebugPrint.h  DebugPrint.py  XSetting.cpp  XSetting.h  XSetting.py
Control/: CameraController.cpp  CameraController.h  CameraController.py  MainController.cpp  MainController.h  MainController.py  ViewController.cpp  ViewController.h  ViewController.py
Control/.ipynb_checkpoints/: CameraController-checkpoint.cpp  CameraController-checkpoint.h  MainController-checkpoint.h
Entity/: CameraBase.cpp  CameraBase.h  CameraBase.py  CameraHandle.py  CameraInterface.cpp  CameraInterface.h  CameraInterface.py  EntityTest.cpp  EntityTest.h  EntityTest.h.autosave
Entity/.ipynb_checkpoints/: CameraBase-checkpoint.h  EntityTest-checkpoint.cpp  EntityTest-checkpoint.h
GP_testMain/: Cam.py  MVSDK_API_ENG.chm  cam_main.py  mvsdk.py  qr_detection.py
Test/: CameraWin.py  CameraWin.ui  Test.cpp  Test.h  Test.py  TestCamera.py
Test/TestCameraExample/: camera.py
Views/: ContentsNavWin.cpp  ContentsNavWin.h  ContentsNavWin.py  ContentsNavWin.ui  MachineVisionWin.cpp  MachineVisionWin.h  MachineVisionWin.py  MachineVisionWin.ui  MainWindow.cpp  MainWindow.h  MainWindow.py  MainWindow.ui  TestCameraWin.cpp  TestCameraWin.h  TestCameraWin.py  TestCameraWin.ui  TestCameraWin2.ui  WinBase.cpp  WinBase.h  WinBase.py  WinBase.ui  XLabel.h  XLabel.py
mobile/GeminiMobile/: App.tsx  README_mobile.md  app.json  package-lock.json  package.json  problems.md  tsconfig.json
mobile/GeminiMobile/android/: settings.gradle
mobile/GeminiMobile/android/app/: _BUCK  build.gradle_backup
mobile/GeminiMobile/android/app/src/debug/java/com/geminimobile/: ReactNativeFlipper.java
mobile/GeminiMobile/android/app/src/main/: AndroidManifest.xml
mobile/GeminiMobile/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
mobile/GeminiMobile/android/app/src/main/res/values/: strings.xml
mobile/GeminiMobile/ios/: Podfile
mobile/GeminiMobile/ios/GeminiMobile/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
mobile/GeminiMobile/ios/GeminiMobile.xcodeproj/: project.pbxproj
mobile/GeminiMobile/ios/GeminiMobile.xcodeproj/xcshareddata/xcschemes/: GeminiMobile.xcscheme
mobile/GeminiMobile/ios/GeminiMobile.xcworkspace/: contents.xcworkspacedata
mobile/GeminiMobile/ios/GeminiMobileTests/: GeminiMobileTests.m
mobile/GeminiMobile/patches/: react-native+0.69.2.patch
mobile/GeminiMobile/scripts/Controller/: MainController.tsx
mobile/GeminiMobile/scripts/Views/: HomeView.tsx  SettingsView.tsx  TestView.tsx
mobile/GeminiMobile/scripts/Views/Components/: ViewHeader.tsx
resource/: resource.qrc
src/cpp/Common/: Common.h
src/cpp/Views/: MainWindow.cpp  MainWindow.ui  TestCameraWin2.ui  XLabel.cpp
src/python/Algorithm/: ImageProcRegister.py  RobotPolicyRegister.py
src/python/Algorithm/ImageProc/: Image2Video.py  ImageAdaptiveThresholding.py  ImageColorCorrection1.py  ImageColorCorrection2.py  ImageColorCorrection3.py  ImageColorCorrection4.py  ImageColorCorrection5.py  ImageCornerDetect.py  ImageFaceDetect.py  ImageForegroundExtraction.py  ImageKmean8.py  ImageOpticalFlow.py  ImageOtsusBinarization.py  ImageProcBase.py  ImageProcColorReverse.py  ImageQR.py  ImageQR2.py  ImageQR_RobotMarker.py  ImageRotate.py  ImageSave.py  ImageYoloV3.py  ImageYoloV3_low_res.py  WhiteBalance.py
src/python/Algorithm/Models/: ContextEncoderNet.py
src/python/Algorithm/RobotPolicy/: RobotPolicyBase.py  RobotPolicyPos.py  RobotPolicyQR_pos.py  RobotPolicyTest.py
src/python/Algorithm/yolo/: detect.py
src/python/Algorithm/yolo/models/: common.py  experimental.py
src/python/Algorithm/yolo/utils/: datasets.py  general.py  plots.py
src/python/Common/: Common.py  WindowSwitcher.py  XSetting.py  mvsdk.py
src/python/Control/: CameraController.py  MainController.py  RobotController.py  ViewController.py
src/python/Entity/: CameraBase.py  CameraCellphone.py  CameraData.py  CameraEPuck.py  CameraHandle.py  CameraInterface.py  CameraMindVision.py  DataHandle.py  HandleBase.py  ImageHandle.py  RobotBase.py  RobotCellphone.py  RobotEpuck.py  RobotEpuckGRN.py  RobotTwinsEpuck.py  RobotVEpuck.py  ViewListQItem.py
src/python/Entity/RadioButtonGroup/: CheckedButton.py  RadioButton.py  RadioButtonGroup.py
src/python/Examples/: 生成二维码图像.py
src/python/Test/: EpuckTest.py  Test.py  TestListView.py  TestMatplot3d.py  TestVPuckSim.py
src/python/Views/: CameraViewFrame.py  CellphoneFrame.py  ContentsNavWin.py  ContentsNavWin.ui  HomePage.py  HomePage.ui  HomePageMainView.py  HomePageMainView.ui  ImageProcViewBase.py  ImageProcViewFrame.py  MachineVisionWin.py  MachineVisionWin.ui  MainWindow.py  MainWindow.ui  MessageShow.py  MultiRobotControlFrame.py  MultiViewFrame.py  NewControlWin.py  NewControlWin.ui  RobotFrame.py  RobotFrameTest.py  SettingPage.py  SettingPage.ui  TestCameraWin.py  ViewFrameBase.py  WinBase.py  XLabel.py  ui_ContentsNavWin.py  ui_HomePage.py  ui_HomePageMainView.py  ui_MachineVisionWin.py  ui_MainWindow.py  ui_NewControlWin.py  ui_SettingPage.py
utils/: detectArUcoMarker.py  mkArUcoMarker.py
(+5 files in other folders)
